# GeneSlime

./: CMakeLists.txt  README.md  main.cu
build_scripts/: build.bat
compression/: genome_compression.cu
config/: constants.cuh
core/: ca_multihead.cu  flow_lenia.cu  genome.cu  genome_mutations.cu  genome_variants.cu  organism.cu  runtime.cu  types.cuh
debug/: auto_trace.cuh  kernel_trace.cu  param_validator.cu
kernels/: archive_batch.cu  svd_jacobi.cu  tensor_wmma.cu  utils.cu
learning/: autodiff.cu  diresa.cu  diresa_training.cu
lifecycle/: regulatory.cu  selection.cu
memory/: archive.cu  parallel_compaction.cu  stigmergy.cu  trace_encoding.cu
metrics/: fitness.cu  population.cu
tools/: audit_connectivity.py  commit.sh  find_magic_numbers.py  find_undefined_symbols.py  validate_config.py  verify_kernels.py
utils/: tile_ops.cuh
